<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg_new"
    tools:context=".ui.ForgotPasswordActivity">


    <EditText
        android:id="@+id/edtEmail"
        android:layout_width="0dp"
        android:layout_height="52dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/white_border_bg"
        android:fontFamily="sans-serif"
        android:hint="@string/emailOrMobile"
        android:inputType="textEmailAddress"
        android:maxLength="20"
        android:padding="15dp"
        android:textColorHint="@color/gray"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btnSignUp"
        app:layout_constraintWidth_percent="0.95" />

    <Button
        android:id="@+id/btnSignUp"
        android:layout_width="0dp"
        android:layout_height="52dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/btngradient"
        android:fontFamily="sans-serif"
        android:text="@string/reset_password"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/txtAlreadyRegister"
        app:layout_constraintWidth_percent="0.95" />

    <TextView
        android:id="@+id/txtAlreadyRegister"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginBottom="30dp"
        android:fontFamily="sans-serif"
        android:text="@string/terms_and_condition"
        android:textColor="@color/textColor"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
         />

    <ProgressBar
        android:id="@+id/progressSignUp"
        style="?android:attr/progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>