<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroundimage">

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.9"
        android:background="@color/background" />

    <LinearLayout
        android:id="@+id/back_linear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="@dimen/_10sdp"
            android:layout_height="@dimen/_10sdp"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/_10sdp"
            android:src="@drawable/backarrow" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:fontFamily="sans-serif"
            android:text="@string/back"
            android:textColor="@color/white"
            android:textSize="@dimen/_12sdp"
            android:textStyle="normal" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/back_linear"
        android:layout_marginLeft="@dimen/_5sdp"
        android:layout_marginTop="@dimen/_12sdp"
        android:layout_marginRight="@dimen/_5sdp"
        android:background="@drawable/gradienttext"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/linear_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="@dimen/_12sdp"
            android:layout_marginRight="20dp"
            android:background="@drawable/btnshape"
            android:orientation="horizontal">



                <EditText
                    android:padding="10dp"
                    android:id="@+id/etOldPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:fontFamily="sans-serif"
                    android:hint="@string/old_pass"
                    android:inputType="textPassword" />



            <!--        <EditText-->
            <!--            android:id="@+id/et_emailForget"-->
            <!--            android:layout_width="match_parent"-->
            <!--            android:layout_height="52dp"-->
            <!--            android:layout_centerInParent="true"-->
            <!--            android:layout_marginTop="1dp"-->
            <!--            android:background="@drawable/btnshape"-->
            <!--            android:hint="@string/emailOrMobile"-->
            <!--            android:imeOptions="actionDone"-->
            <!--            android:inputType="textEmailAddress"-->
            <!--            android:padding="15dp"-->
            <!--            android:textColorHint="@color/gray"-->
            <!--            android:textSize="15sp" />-->
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear_editnew"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/linear_edit"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_marginRight="20dp"
            android:background="@drawable/btnshape"
            android:orientation="horizontal">



                <EditText
                    android:padding="10dp"
                    android:id="@+id/etNewPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:fontFamily="sans-serif"
                    android:hint="@string/new_pass"
                    android:inputType="textPassword" />



        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear_editConfirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/linear_editnew"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_marginRight="20dp"
            android:background="@drawable/btnshape"
            android:orientation="horizontal">


                <EditText
                    android:padding="10dp"
                    android:id="@+id/etConPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:fontFamily="sans-serif"
                    android:hint="@string/confirm_pass"
                    android:inputType="textPassword" />



        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearBottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/linear_editConfirm"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_resetPass"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:background="@drawable/btngradient"
                android:fontFamily="sans-serif"
                android:text="@string/upadte_pass"
                android:textColor="@color/white"></Button>


        </LinearLayout>

    </LinearLayout>

    <ProgressBar
        android:id="@+id/loading_changePass"
        style="?android:attr/progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="invisible" />

</RelativeLayout>